[package]
name = "libp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version = "0.44.0", features = ["mdns"]}
futures = "0.3.1"
async-std = { version = "1.6.2", features = ["attributes"] }
error-chain = "0.12.2"